Fixed the spacing in the responsive menu

--- a/src/App.scss
+++ b/src/App.scss
@@ -38,10 +38,6 @@ $font: 'futura-pt';
   justify-content: space-between;
   background-color: $background-color-dark;
   opacity: 0.8;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
   height: 3.5rem;
   a {
     padding-top: 1rem;
@@ -52,7 +48,7 @@ $font: 'futura-pt';
   visibility: visible;
   display: flex;
   align-items: center;
-  padding-right: 2rem;
+  padding: 0.5rem 1rem;
   cursor: pointer;
 
   @include medium {
@@ -114,7 +110,7 @@ $font: 'futura-pt';
 .responsive-container {
   background-color: $background-color-dark;
   opacity: 0.8;
-  position: fixed;
+  padding: 1rem 1rem 0.5rem 1rem;
   width: 100%;
 
   .name-container {
@@ -164,7 +160,7 @@ $font: 'futura-pt';
     position: fixed;
     top: 0;
     right: 0;
-    padding-top: 0.2rem;
+    padding: 0.5rem 1rem;
 
     @include medium {
       visibility: visible;
